--- a/demo/index.html
+++ b/demo/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="http://fonts.cdnfonts.com/css/common-pixel" rel="stylesheet">
+        <link href="//fonts.cdnfonts.com/css/common-pixel" rel="stylesheet">
         <link href='styles.css' rel="stylesheet"/>
         <title>Title</title>
     </head>
