--- a/demo/index.html
+++ b/demo/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="//fonts.cdnfonts.com/css/common-pixel" rel="stylesheet">
+        <link href="https://fonts.cdnfonts.com/css/common-pixel" rel="stylesheet">
         <link href='styles.css' rel="stylesheet"/>
         <title>Title</title>
     </head>
@@ -11,6 +11,16 @@
         </header>
         <main>
             <img class="circuit" src="circuits.png">
+        
+            <div class="form-container">
+                <form>
+                    <fieldset>
+                        <input type="text">
+                        <input type="password">
+                        <input type="button" value="LOGIN">
+                    </fieldset>
+                </form>
+            </div>
         </main>
         <footer>
 
