--- a/demo/index.html
+++ b/demo/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link href="https://fonts.cdnfonts.com/css/common-pixel" rel="stylesheet">
-        <link href='styles.css' rel="stylesheet"/>
+        <link href='index.css' rel="stylesheet"/>
         <title>Title</title>
     </head>
     <body>
