--- a/demo/settings.html
+++ b/demo/settings.html
@@ -9,17 +9,18 @@
         <header>
             <section>
                 <div>C O N F I G</div>
-                <img src="comp4.gif">
+                <img src="exit.png">
             </section>
         </header>
         <main>
+            <div class="sliding-background"></div>
             <button type="button" class="collapsible">
                 <div class="coll-cont">
                     <form>
-                        <input type="text" value="u s e r n a m e"/>
+                        <input type="text" value=""/>
                     </form>
                     <div>
-                        Open Collapsible
+                        search
                     </div>
                 </div>
             </button>
